--- a/BE/views/AdminSignUp.ejs
+++ b/BE/views/AdminSignUp.ejs
@@ -7,9 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-    <div>this is the start link</div>
-    <div>This is <%= name %></div>
-    <div>Your Email is:  <%= email %> </div>
+<div>Hello <%= name %></div>
+<div>Thank you for choosing us... you can now continue!!!</div>
 
 
     <a href="<%= url %>" >Click here to register</a>
